[package]
name = "testrepo"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/luketestorg/testrepo"
description = "A simple hello world Rust crate"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
